Update to jsonld-context-parser 2.0.0

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,8 @@
     "module": "commonjs",
     "lib": [
       "es6",
-      "esnext.asynciterable"
+      "esnext.asynciterable",
+      "dom"
     ],
     "target": "es6",
     "noImplicitAny": true,
