--- a/package.json
+++ b/package.json
@@ -40,7 +40,6 @@
     "test"
   ],
   "devDependencies": {
-    "@types/graphql": "^14.0.0",
     "@types/jest": "^27.0.0",
     "@types/minimist": "^1.2.0",
     "coveralls": "^3.0.0",
@@ -50,7 +49,7 @@
     "ts-jest": "^27.0.0",
     "tslint": "^6.0.0",
     "tslint-eslint-rules": "^5.3.1",
-    "typescript": "^5.0.0"
+    "typescript": "^5.7.2"
   },
   "jest": {
     "globals": {
@@ -83,10 +82,10 @@
     "version": "manual-git-changelog onversion"
   },
   "dependencies": {
-    "@rdfjs/types": "*",
-    "graphql-to-sparql": "^2.4.0",
+    "graphql-to-sparql": "^5.0.0",
     "jsonld-context-parser": "^2.1.0",
-    "sparqlalgebrajs": "^3.0.2",
-    "sparqljson-to-tree": "^2.1.0"
-  }
+    "sparqlalgebrajs": "^5.0.0",
+    "sparqljson-to-tree": "^3.0.2"
+  },
+  "packageManager": "yarn@1.22.22+sha512.a6b2f7906b721bba3d67d4aff083df04dad64c399707841b7acf00f6b133b7ac24255f2652fa22ae3534329dc6180534e98d17432037ff6fd140556e2bb3137e"
 }
